# ml-metrics-visualizer

./: .gitignore  BLOG.md  README.md  app.py  pyproject.toml  requirements.txt
data/: kaggle_student_performance_metadata.json  kaggle_student_performance_pass_fail.csv
scripts/: download_kaggle_student_performance.py
src/ml_metrics_visualizer/: __init__.py  modeling.py
tests/: test_modeling.py
